카테고리 오류 수정

--- a/_posts/2024-06-30-APK.md
+++ b/_posts/2024-06-30-APK.md
@@ -3,7 +3,7 @@ layout: post
 title: APK 빌드
 subtitle: APK 빌드 과정에 대해 알아보자
 author: 주세환
-categorie: Flutter
+categories: Flutter
 tags: [Flutter, APK]
 ---
 usb로 스마트폰과 연결하여 테스트 할 때 어떤 작업을 진행하는지 알아보자.
