--- a/_posts/2024-06-30-APK.md
+++ b/_posts/2024-06-30-APK.md
@@ -6,7 +6,7 @@ author: 주세환
 categories: Flutter
 tags: [Flutter, APK]
 ---
-디바이스와 연결하여 테스트 할 때 어떤 동작을 진행하는지 알아보자.
+디바이스와 연결하여 테스트 할 때 어떤 동작을 하는지 알아보자.
 
 # 빌드
 
