post update : APK 빌드와 디바이스 연결 ADB 태그 추가

--- a/_posts/2024-06-30-APK.md
+++ b/_posts/2024-06-30-APK.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: APK 빌드와 디바이스 연결
-subtitle: APK 빌드 과정, 디바이스 연결에 대해 알아보자
+subtitle: APK 빌드 과정, 디바이스 연결에 대해 알아보자.
 author: 주세환
 categories: Flutter
-tags: [Flutter, APK]
+tags: [Flutter, APK, ADB]
 ---
 디바이스와 연결하여 테스트 할 때 어떤 동작을 하는지 알아보자.
 
