post update : Builder-빌더

--- a/_posts/2024-09-02-Builder-빌더.md
+++ b/_posts/2024-09-02-Builder-빌더.md
@@ -68,7 +68,7 @@ public class NutritionFacts {
 }
 ```
 
->Lombok의 @AllArgsConstructor 애너테이션은 모든 필드를 초기화하는 생성자를 자동으로 생성해줍니다. 하지만 점층적 생성자 패턴의 경우, 필요에 따라 추가적인 생성자를 수동으로 작성해야 하는 불편함이 여전히 존재합니다.
+>Lombok의 @AllArgsConstructor 어노테이션은 모든 필드를 초기화하는 생성자를 자동으로 생성해줍니다. 하지만 점층적 생성자 패턴의 경우, 필요에 따라 추가적인 생성자를 수동으로 작성해야 하는 불편함이 여전히 존재합니다.
 
 
 
@@ -106,7 +106,7 @@ public class NutritionFacts {
 }
 
 ```
->Lombok의 @Builder 애너테이션을 사용하면 자동으로 빌더 패턴을 구현할 수 있습니다. 필드들을 체이닝 방식으로 설정할 수 있으며, 필요하지 않은 필드는 생략할 수 있습니다.
+>Lombok의 @Builder 어노테이션을 사용하면 자동으로 빌더 패턴을 구현할 수 있습니다. 필드들을 체이닝 방식으로 설정할 수 있으며, 필요하지 않은 필드는 생략할 수 있습니다.
 
 
 ---
@@ -205,7 +205,7 @@ public class Person {
     private String address;
 
     public static void main(String[] args) {
-        // @Builder 애너테이션으로 객체 생성
+        // @Builder 어노테이션으로 객체 생성
         Person person = Person.builder()
                               .firstName("John")
                               .lastName("Doe")
